// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Task UI Should be able to add a prefix to a task's name 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜  *  hello                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to add a prefix to a task's name 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜  *  hi, hello                                      ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to add a suffix to a task's name 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜  *  hello                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to add a suffix to a task's name 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜  *  hello world                                    ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to add an infix to a task's name 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜  *  hello                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to add an infix to a task's name 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜  *  hey, hello                                     ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to cycle row backwards 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃   [ ] Alpha                                          ┃
 ┃                                                      ┃
 ┃   [ ] Beta                                           ┃
 ┃                                                      ┃
 ┃ ➜ [ ] Gamma                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to cycle row backwards 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃   [ ] Alpha                                          ┃
 ┃                                                      ┃
 ┃ ➜ [ ] Beta                                           ┃
 ┃                                                      ┃
 ┃   [ ] Gamma                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to cycle row backwards 3`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜ [ ] Alpha                                          ┃
 ┃                                                      ┃
 ┃   [ ] Beta                                           ┃
 ┃                                                      ┃
 ┃   [ ] Gamma                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to cycle row backwards 4`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃   [ ] Alpha                                          ┃
 ┃                                                      ┃
 ┃   [ ] Beta                                           ┃
 ┃                                                      ┃
 ┃ ➜ [ ] Gamma                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to cycle row backwards 5`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃   [ ] Alpha                                          ┃
 ┃                                                      ┃
 ┃ ➜ [ ] Beta                                           ┃
 ┃                                                      ┃
 ┃   [ ] Gamma                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to cycle row forwards 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃   [ ] Alpha                                          ┃
 ┃                                                      ┃
 ┃   [ ] Beta                                           ┃
 ┃                                                      ┃
 ┃ ➜ [ ] Gamma                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to cycle row forwards 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜ [ ] Alpha                                          ┃
 ┃                                                      ┃
 ┃   [ ] Beta                                           ┃
 ┃                                                      ┃
 ┃   [ ] Gamma                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to cycle row forwards 3`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃   [ ] Alpha                                          ┃
 ┃                                                      ┃
 ┃ ➜ [ ] Beta                                           ┃
 ┃                                                      ┃
 ┃   [ ] Gamma                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to cycle row forwards 4`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃   [ ] Alpha                                          ┃
 ┃                                                      ┃
 ┃   [ ] Beta                                           ┃
 ┃                                                      ┃
 ┃ ➜ [ ] Gamma                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to cycle row forwards 5`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜ [ ] Alpha                                          ┃
 ┃                                                      ┃
 ┃   [ ] Beta                                           ┃
 ┃                                                      ┃
 ┃   [ ] Gamma                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to discard a DRAFT task 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ No tasks created yet                                 ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to discard a DRAFT task 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜  *                                                 ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to discard a DRAFT task 3`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ No tasks created yet                                 ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to discard a DRAFT task 4`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃   [ ] Alpha                                          ┃
 ┃                                                      ┃
 ┃   [ ] Beta                                           ┃
 ┃                                                      ┃
 ┃ ➜  *  Gamma                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to discard a DRAFT task 5`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃   [ ] Alpha                                          ┃
 ┃                                                      ┃
 ┃ ➜ [ ] Beta                                           ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to discard uncommitted changes of an ONGOING task 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜ [ ] Gamma                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to discard uncommitted changes of an ONGOING task 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜  *  Gamma Ray                                      ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to discard uncommitted changes of an ONGOING task 3`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜ [ ] Gamma                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to insert tasks 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜  *                                                 ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to insert tasks 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜  *  Hello World                                    ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to insert tasks 3`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜ [ ] Hello World                                    ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to insert tasks 4`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃   [ ] Hello World                                    ┃
 ┃                                                      ┃
 ┃ ➜  *                                                 ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to insert tasks 5`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃   [ ] Hello World                                    ┃
 ┃                                                      ┃
 ┃ ➜  *  Hello World                                    ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to insert tasks 6`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃   [ ] Hello World                                    ┃
 ┃                                                      ┃
 ┃ ➜ [ ] Hello World                                    ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to navigate through each character backwards when editing a task 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜ [ ] TODO                                           ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to navigate through each character backwards when editing a task 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜  *  TODO                                           ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to navigate through each character backwards when editing a task 3`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜  *  TODO                                           ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to navigate through each character backwards when editing a task 4`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜  *  TODO                                           ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to navigate through each character backwards when editing a task 5`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜  *  TODO                                           ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to navigate through each character backwards when editing a task 6`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜  *  TODO                                           ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to navigate through each character forwards when editing a task 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜ [ ] TODO                                           ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to navigate through each character forwards when editing a task 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜  *  TODO                                           ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to navigate through each character forwards when editing a task 3`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜  *  TODO                                           ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to navigate through each character forwards when editing a task 4`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜  *  TODO                                           ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to navigate through each character forwards when editing a task 5`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜  *  TODO                                           ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to navigate through each character forwards when editing a task 6`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜  *  TODO                                           ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to remove a committed task 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃   [ ] Alpha                                          ┃
 ┃                                                      ┃
 ┃   [ ] Beta                                           ┃
 ┃                                                      ┃
 ┃ ➜ [ ] Gamma                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to remove a committed task 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃   [ ] Alpha                                          ┃
 ┃                                                      ┃
 ┃ ➜ [ ] Beta                                           ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to remove a committed task 3`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜ [ ] Alpha                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to remove a committed task 4`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ No tasks created yet                                 ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to remove a committed task 5`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ No tasks created yet                                 ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to toggle a task from ONGOING to FINISHED and vice versa 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜ [ ] Gamma                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to toggle a task from ONGOING to FINISHED and vice versa 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜ [x] Gamma                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to toggle a task from ONGOING to FINISHED and vice versa 3`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜ [ ] Gamma                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to toggle a task from ONGOING to FINISHED and vice versa 4`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜ [x] Gamma                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to toggle a task from ONGOING to FINISHED and vice versa 5`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜ [ ] Gamma                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to update a task 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃   [ ] Alpha                                          ┃
 ┃                                                      ┃
 ┃   [ ] Beta                                           ┃
 ┃                                                      ┃
 ┃ ➜ [ ] Gamma                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to update a task 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃   [ ] Alpha                                          ┃
 ┃                                                      ┃
 ┃   [ ] Beta                                           ┃
 ┃                                                      ┃
 ┃ ➜  *  Gamma Ray                                      ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to update a task 3`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃   [ ] Alpha                                          ┃
 ┃                                                      ┃
 ┃   [ ] Beta                                           ┃
 ┃                                                      ┃
 ┃ ➜ [ ] Gamma Ray                                      ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to update the UI's title 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ No tasks created yet                                 ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should be able to update the UI's title 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ My TODO list                                         ┃
 ┃                                                      ┃
 ┃ No tasks created yet                                 ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should not be able to commit a DRAFT task with an empty name 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜  *                                                 ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should not be able to commit a DRAFT task with an empty name 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃   [ ] hello there                                    ┃
 ┃                                                      ┃
 ┃ ➜  *                                                 ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should not be able update a FINISHED task 1`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜ [x] Gamma                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;

exports[`Task UI Should not be able update a FINISHED task 2`] = `
"
 ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 ┃                                                      ┃
 ┃ TODO                                                 ┃
 ┃                                                      ┃
 ┃ ➜ [x] Gamma                                          ┃
 ┃                                                      ┃
 ┃                                                      ┃
 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
"
`;
